복사와참조.html
call by value, call by reference 차이

--- a/xampp/htdocs/jsstudy/복사와참조.html
+++ b/xampp/htdocs/jsstudy/복사와참조.html
@@ -4,6 +4,7 @@
     <input type="text" name="" id="merong" value="흥">
 </body>
 <script>
+    // call by value, call by reference 차이
     var ggg = "roze man man se!";      //   원시타입 문자열(string);
     // var bbb = new String("kgb");
     // 원시타입에 .을 붙이는 순간 Wrapper 객체로 자동으로 바뀜
