--- a/xampp/htdocs/jsstudy/this에대하여.html
+++ b/xampp/htdocs/jsstudy/this에대하여.html
@@ -4,7 +4,7 @@
     <button id="jungsu">Button</button>
 </body>
 <script>
-
+    // call, apply 둘 중 1개와 bind를 꼭 기억하자
     const mJungsu = document.querySelector('#jungsu');
 
     var josh = {
