--- a/xampp/htdocs/jsstudy/CRUD/list.html
+++ b/xampp/htdocs/jsstudy/CRUD/list.html
@@ -3,18 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        #modal{
+            position: fixed;
+            left: 0px;top:0px;
+            width: 100vw; height: 100vh;
+            background-color: rgba(91, 154, 227, 0.8);
+            display: none;
+        }
+        #mCont{
+            width: 60%;
+            height: 70%;
+            margin: 50px auto;  /* 수평 가운데 정렬 */
+            background-color: orange;
+        }
+    </style>
 </head>
 <body>
+    <div id="modal">
+        <div id="mCont">
+            <form method="get" action="">
+                <h1>상세</h1>
+                <!-- 사용자에게 보여줄 필요가 없는데, 프로그램상 필요한 값 hidden -->
+                <input type="hidden" name="n_num" value="">
+                제목 <input type="text" name="n_title" value=""><br>
+                지으니 <input type="text" name="n_writer" value="" disabled><br>
+                내용<br>
+                <textarea name="n_cont" cols="30" rows="10"></textarea><br>
+                관련언어(맥스 3개까지만)<br>
+                JS<input type="checkbox" name="n_skill" value="js" onclick="f3ck(this)" >
+                Java<input type="checkbox" name="n_skill" value="java" onclick="f3ck(this)">
+                Oracle<input type="checkbox" name="n_skill" value="oracle" onclick="f3ck(this)">
+                HTML<input type="checkbox" hgt name="n_skill" value="html" onclick="f3ck(this)">
+                CSS<input type="checkbox" hgt name="n_skill" value="css" onclick="f3ck(this)"><br>
+                <button type="submit" onclick="fsubmit()">수정</button>&nbsp;&nbsp;
+                <button type="submit" onclick="fsubmit()">삭제</button>
+            </form>
+        </div>
+    </div>
+
     <h1>게시판</h1>
     <div id="wrapper">
         <div id="list"></div>
     </div>
 </body>
 <script>
+    // alert(document.querySelectorAll('[hgt]')[1].value);
+
+    const myModal = document.querySelector('#modal');
     const tblName = "uglyGesi";     // 로컬스토리지 테이블 키 값
     let dataArr = JSON.parse(localStorage.getItem(tblName));    // 데이터 배열
+    const gList = document.querySelector('#list');  // localStorage 데이터 미리 읽어오기
 
-    const gList = document.querySelector('#list');
+
+    function fread(pNum){
+        event.preventDefault();     // built-in href 기능 막기
+        // 빼먹는 사람들이 있어 변칙적으로 그냥 #을 붙이라고 함(페이지내 이동)
+        document.querySelector('[name=n_num]').value = pNum;
+
+        myModal.style.display = 'block';    // 눈에 보이게
+
+        for(let i=0; i<dataArr.length; i++){
+            if(dataArr[i].num == pNum){     // 찾던 글
+                document.querySelector('[name=n_title]').value = dataArr[i].title;
+                document.querySelector('[name=n_writer]').value = dataArr[i].writer;
+                document.querySelector('[name=n_cont]').value = dataArr[i].cont;
+                
+                // 체크박스를 어떻게 할 건지
+                let ckArr = dataArr[i].skills;
+                for(let j=0; j<ckArr.length; j++){
+                    document.querySelector(`[value=${ckArr[j]}]`).checked=true;
+                }
+                console.log(dataArr[i].skills)
+
+                break;  // 이런 걸 안 빼먹는 게 중요하다. 여기선 return 써도 된다.
+            }
+        }
+    }
 
     function fList(){
         let tblStr = `<table border=1>`;
@@ -22,7 +87,7 @@
             for(let i=0; i<dataArr.length; i++){
                 tblStr += `<tr>`;
                 tblStr += `<td>${dataArr[i].num}</td>`;
-                tblStr += `<td><a href='read.html'>${dataArr[i].title}</a></td>`;
+                tblStr += `<td><a href='#' onclick="fread('${dataArr[i].num}')">${dataArr[i].title}</a></td>`;
                 tblStr += `<td>${dataArr[i].writer}</td>`;
                 tblStr += `<td>${dataArr[i].date}</td>`;
                 tblStr += `</tr>`;
