--- a/xampp/htdocs/jsstudy/CRUD/write.html
+++ b/xampp/htdocs/jsstudy/CRUD/write.html
@@ -8,7 +8,7 @@
 <div id="wrapper">
     <!-- 어라 action이 서버쪽 동적 페이지가 아니고 정적 html이 왔어? 이것의 의미는? -->
     <form method="get" action="write_action.html">
-        <h1>JS와 LS로 맹그는 게시팡</h1>
+        <h1>JS와 LS로 만들기 게시판</h1>
         <!--disabled 처리하면 서버로 넘어가지가 않음. hidden이 필요!-->
         제목 <input type="text" name="n_title" value="흥흥" required><br>
         지으니 <input type="text" name="n_writer" value="" required><br>
