--- a/xampp/htdocs/jsstudy/CRUD/del_action.html
+++ b/xampp/htdocs/jsstudy/CRUD/del_action.html
@@ -3,15 +3,14 @@
 <script src="./jsp.js"></script>
 <script>
     // 삭제는 num값하고, 배열의 splice 멧뫈 있으면 금방한다.
+    let num = request.getParameter('n_num');
+
     const tblName = "uglyGesi";
     let dataArr = JSON.parse(localStorage.getItem(tblName));
 
     for(let i=0; i<dataArr.length; i++){
         if(dataArr[i].num == num){
-            dataArr[i].title.remove();
-            dataArr[i].cont.remove()
-            dataArr[i].skills.remove()
-            dataArr[i].date.remove()
+            dataArr.splice(i, 1);   // 이런 걸 파괴적 메서드라고 부른다.
 
             break;
         }
