--- a/xampp/htdocs/jsstudy/CRUD/무한스크롤.html
+++ b/xampp/htdocs/jsstudy/CRUD/무한스크롤.html
@@ -11,6 +11,13 @@
             document.write("<h1>지완이형은 오타왕</h1>");
         }
 
+        // 크롬의 문제! -> 구글의 답변은 본인들 브라우저 성능이 너무 좋아(빨라서 그렇다고 함..)
+        // window.scrollTo(x좌표, y좌표);
+        setTimeout(function(){
+            window.scrollTo(0, 0);
+        }, 50);
+        window.scrollTo(0, 0);
+
         // 스크롤 이벤트
         window.onscroll = function(){
             let scrollTop = document.documentElement.scrollTop;
