--- a/xampp/htdocs/jsstudy/CRUD/Promise.html
+++ b/xampp/htdocs/jsstudy/CRUD/Promise.html
@@ -2,8 +2,51 @@
 <html lang="en">
 <meta charset="UTF-8">
 <script>
-    // Promise는 중요한데, 다행히 개발자가 직접 Promise를 만들 일은 거의 없다.
-    // 라이브러리 만드는 사람들이 만들고, 개발자는 잘 이용하기만 하면된다.
+    /* 
+        Promise는 중요한데, 다행히 개발자가 직접 Promise를 만들 일은 거의 없다.
+        라이브러리 만드는 사람들이 만들고, 개발자는 잘 이용하기만 하면된다.
+        원래 블루버드라는 회사가 비동기 처리할 때 콜백을 많이 사용하다보니
+        콜백 안에 콜백 안에 콜백식으로 프로그램이 짜여지는 것을 보고,
+        Hell of Callback이라 부르고 그것의 해결책으로 내어 놓은 걸, 자바스크립트 언어 개발팀
+        에서 받아들임
+
+        처음에는 낯선데 별 거 없다.
+    */
+
+    /* 
+    var MyPromise = function(){
+        return new Promise((res, rej)=>{
+            // 약속이 잘 실행되었을 때 res 함수 호출
+            // 약속이 깨졌을 때 rej함수 호출
+            // res("res 성공");
+            rej("미안!")
+        });
+    } 
+    */
+
+    var MyPromise = function(){
+        return new Promise((res, rej)=>{
+            // 비동기를 위해 ajax
+            var xhr = new XMLHttpRequest();
+            xhr.open('get', 'dummyData.json', true);
+            xhr.onreadystatechange = function(){
+                if(xhr.readyState == 4 && xhr.status == 200){
+                    res(JSON.parse(xhr.responseText));
+                }
+            }
+            xhr.send();
+        });
+    } 
+
+    // Promise 사용 패턴
+    MyPromise().then((rslt)=>{
+        console.log("결과 : " + rslt);
+    }).catch((error)=>{
+        console.log("에러 : " + error);
+    }).finally(()=>{
+        console.log("예외있는데 잘 안쓴다.");
+    });
+
 </script>
 
 
